arm64: cortex-a53: fixup for errata #843419
Pick commits from upstream:
* 6ffe992 arm64: errata: Pass --fix-cortex-a53-843419 to ld if workaround enabled
* 67dfa17 arm64: errata: Add -mpc-relative-literal-loads to build flags
* b6dd8e0 arm64: errata: use KBUILD_CFLAGS_MODULE for erratum #843419
* df057cc arm64: errata: add module build workaround for erratum #843419

Signed-off-by: hmz007 <hmz007@gmail.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -159,6 +159,18 @@ menu "Bus support"
 config ARM_AMBA
 	bool
 
+config ARM64_ERRATUM_843419
+	bool "Cortex-A53: 843419: A load or store might access an incorrect address"
+	default y
+	select ARM64_MODULE_CMODEL_LARGE if MODULES
+	help
+	  This option links the kernel with '--fix-cortex-a53-843419' and
+	  builds modules using the large memory model in order to avoid the use
+	  of the ADRP instruction, which can cause a subsequent memory access
+	  to use an incorrect address on Cortex-A53 parts up to r0p4.
+
+	  If unsure, say Y.
+
 endmenu
 
 menu "Kernel Features"
